# AI-Based_Plant_Disease_Identification_Application

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Project_Documentation.rtf  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ~$oject_Documentation.rtf
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Footer.vue  Header.vue
frontend/src/i18n/: translations.js  useI18n.js
frontend/src/pages/: DiagnosisPage.vue  History.vue  Home.vue  Results.vue
frontend/src/services/: api.js
scripts/: download_pretrained_model.py  train_plant_disease.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/database/: __init__.py  models.py
src/llm/: __init__.py  engine.py
src/multilingual/: __init__.py  translator.py
src/vision/: __init__.py  hf_loader.py  model.py
