[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-disease-identifier"
version = "0.1.0"
description = "Multilingual AI-Based Plant Disease Identification Application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sarath Samavarath"}
]

dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "fastapi==0.103.1",
    "langchain==0.0.310",
    "chromadb>=0.5.6",
    "sqlalchemy==2.0.21",
    "pydantic==2.3.0",
    "python-dotenv==1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
